--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,14 @@
 <!-- footer -->
-<footer class="bg-dark footer-section">
+<footer class="bg-dark">
   <div class="section">
     <div class="container">
       <div class="row">
+        <div class="col-md-12 text-center">
+          <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
+        {% for link in site.data.settings.menu %}
+          <a class="nav-link" href="{{ site.url }}{{ site.baseurl }}{{ link.link }}">{{ link.name }}</a>
+        {% endfor %}
+        </div>
         {% comment %}
         <div class="col-md-4">
           <h5 class="text-light">Email</h5>
