--- a/_includes/device.html
+++ b/_includes/device.html
@@ -6,10 +6,15 @@
         <a class="text-dark" href="{{ device.api_doc_url | relative_url }}">{{ device.name }}</a>
       </h4>
       <p class="card-text">{{ device.description }}</p>
-      {% if device.available %}
+      {% if device.api_doc_url %}
       <a href="{{ device.api_doc_url | relative_url }}" class="btn btn-xs btn-primary">Read More</a>
       {% else %}
-      <p class="font-italic">Coming soon</p>
+      <a href="#" class="btn btn-xs btn-primary disabled" aria-disabled="true">Read More (coming soon)</a>
+      {% endif %}
+      {% if device.buy_link %}
+      <a href="{{ device.buy_link | relative_url }}" class="btn btn-xs btn-primary">Buy</a>
+      {% else %}
+      <a href="#" class="btn btn-xs btn-primary disabled" aria-disabled="true">Buy (coming soon)</a>
       {% endif %}
     </div>
   </article>
