--- a/_includes/specification-command-section.html
+++ b/_includes/specification-command-section.html
@@ -137,13 +137,13 @@ Value            := [0-9a-zA-Z]+</pre>
         </div>
         <br/>
         <p><span class="primary-color">&#x2055;  </span>The <kbd>about.exaberry</kbd> gives the URL of the Exaberry home page.</p>
-        <p><span class="primary-color">&#x2055;  </span>The <kbd>about.documentation</kbd> shows the URL of the documenetation of the device.</p>
+        <p><span class="primary-color">&#x2055;  </span>The <kbd>about.documentation</kbd> shows the URL of the documentation of the device.</p>
         <p><span class="primary-color">&#x2055;  </span> The <kbd>device.name</kbd> is the name of the device. You can customize the device name by</p>
         <p><kbd>write device.name=Your_Desired_Device_Name</kbd></p>
         <p>The device name cannot be longer than 16 characters.</p>
         <p><span class="primary-color">&#x2055;  </span> The <kbd>device.systick</kbd> is the system ticks since powering up. The system tick is increased per microsecond. The accuracy of the system tick is usually not high enough to be used as real time clock.</p>
         <p><span class="primary-color">&#x2055;  </span>The <kbd>device.id</kbd> is the unique ID of the device.</p>
-        <p><span class="primary-color">&#x2055;  </span>The <kbd>device.type_id</kbd> is the type ID of the device. Different type of device has different type_id.</p>
+        <p><span class="primary-color">&#x2055;  </span>The <kbd>device.type_id</kbd> is the type ID of the device. Different API and hardware design combination has a different type_id.</p>
         <p><span class="primary-color">&#x2055;  </span>The <kbd>device.firmware.version</kbd> shows the firmware version the device.</p>
         <p><span class="primary-color">&#x2055;  </span>The <kbd>device.hardware.version</kbd> gives the hardware version the device.</p>
         <p><span class="primary-color">&#x2055;  </span>You can restart the device by entering:</p>
