--- a/_layouts/getting_started.html
+++ b/_layouts/getting_started.html
@@ -49,7 +49,7 @@ layout: default
                 <h5>Opening the device in a client</h5>
                 <p>Click open the Putty client</p>
                 <p>Select "Serial" for the "Connection type"</p>
-                <p>Entery the serial port number we got from the previous step in the "Serial line" box</p>
+                <p>Enter the serial port number we got from the previous step in the "Serial line" box</p>
                 <p>Set the "Speed" to be 115200</p>
                 <p>Click "Open" button</p>
                 <p>After entering the Putty client, You can type an "enter" to bring up the <kbd>&gt;</kbd> symbol</p>
@@ -97,7 +97,7 @@ layout: default
                 <h5>Opening device</h5>
                 <p>You can open the Exaberry device:</p>
                 <p><kbd>sudo screen /dev/ttyACMX 115200</kbd></p>
-                <p>The <kbd>115200</kbd> is the baudrate of the serial connection. The <kbd>/dev/ttyACMX</kbd> is the path to the device you got from the above step.</p>
+                <p>The <kbd>115200</kbd> is the baud rate of the serial connection. The <kbd>/dev/ttyACMX</kbd> is the path to the device you got from the above step.</p>
                 <p>You need "sudo" to gain access to the serial port</p>
                 <p>After entering the Screen client, You can type an "enter" to bring up the <kbd>&gt;</kbd> symbol</p>
                 <img src="assets/images/tutorial/ubuntu_screen_run.jpg" class="rounded w-100 mx-auto d-block" alt="ubuntu_screen_run">
@@ -140,7 +140,7 @@ layout: default
                 <p>We will use the <a href="https://www.gnu.org/software/screen/">GNU Screen</a> to run the command. The Screen client should already be installed in your Mac.</p>
                 <p>You can open the Exaberry device:</p>
                 <p><kbd>screen /dev/tty.usbmodemXXXXX 115200</kbd></p>
-                <p>The <kbd>115200</kbd> is the baudrate of the serial connection. The <kbd>/dev/tty.usbmodemXXXXX</kbd> is the path to the device you got from the above step.</p>
+                <p>The <kbd>115200</kbd> is the baud rate of the serial connection. The <kbd>/dev/tty.usbmodemXXXXX</kbd> is the path to the device you got from the above step.</p>
                 <p>After entering the Screen client, You can type an "enter" to bring up the <kbd>&gt;</kbd> symbol</p>
                 <img src="assets/images/tutorial/mac_screen_run.jpg" class="rounded w-100 mx-auto d-block" alt="mac_screen_run">
             </div>
