--- a/_layouts/interface_documentation.html
+++ b/_layouts/interface_documentation.html
@@ -6,11 +6,11 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-lg-11">
-        <h3 class="text-white font-tertiary text-center">Specifications</h3>
+        <h3 class="text-white font-tertiary text-center">Documentation</h3>
       </div>
     </div>
   </div>
 </section>
 <!-- /page title -->
 
-{% include specification-command-section.html %}
+{% include interface-documentation-command-section.html %}
