--- a/_includes/getting-started-section.html
+++ b/_includes/getting-started-section.html
@@ -13,6 +13,10 @@
       </div>
       <div class="col-md-6 mb-6 mb-md-5">
         <div class="card-body px-4 py-5">
+          <h4 class="text-center">Using web serial terminal</h4>
+          <p class="text-left">1. Connect the device to a computer using a USB cable.</p>
+          <p class="text-left">2. Open <a href="{{ '/web_serial_terminal' | relative_url }}">Web Serial Terminal</a></p>
+          <h4 class="text-center">Using terminal application</h4>
           <p class="text-left">1. Connect the device to a computer using a USB cable.</p>
           <p class="text-left">2. Install a serial port terminal like <a href="https://www.putty.org/">Putty</a> or <a href="https://www.gnu.org/software/screen/">GNU Screen</a>.</p>
           <p class="text-left">3. Figure out the serial port of the device.</p>
